# cpp-py-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.github_project_name}}/: CMakeLists.txt
{{cookiecutter.github_project_name}}/benchmark/: CMakeLists.txt
{{cookiecutter.github_project_name}}/docs/: environment.yml
{{cookiecutter.github_project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.github_project_name}}/python/: CMakeLists.txt  main.cpp
{{cookiecutter.github_project_name}}/python/py/: __init__.py
{{cookiecutter.github_project_name}}/python/src/: main.cpp  py_core.cpp
{{cookiecutter.github_project_name}}/test/: CMakeLists.txt
